Fixed wrong video in the project section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 						<hr>
 
 						<!-- Intro-skills -->
-						<!-- Python, Flask, Sql, HTML/CSS, C lang, Bash, Linux, Windows | in skill section, maybe back-end and front-end? -->
 						<div class="py-5">
 							<h2 class="text-center mb-4"><em>My skills</em></h2>
 							<div id="skills">
@@ -151,9 +150,9 @@
 							<!-- Card Start -->
 							<div class="project">
 								<div class="card">
-									<video src="./static/progressbar.mp4" class="card-img-top object-fit-scale" controls>
-										Youre browser doesn't support this video
-									</video>
+									<div class="video-holder">
+										<iframe class="video" src="https://www.youtube.com/embed/4Da87NPfr2c?si=RWioCxblt03WBLPl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+									</div>
 									<div class="card-body">
 										<h5 class="card-title">
 											Python Progress Bar
@@ -212,8 +211,8 @@
 						</h2>
 
 						<p>Hi, I'm Justin! I am a programmer interested in making a career in tech. I specialize in code on the backend with my most utilized language being Python. I also have experience with the Flask framework.
-						<br> I have experience with HTML and CSS on the frontend, utilizing libaries like Bootstrap to make development quicker and more productive.
-						<br> I have most of my experience in databases with sql languages. Mainly, Sqlite3 since it comes packages as a module in Python.</p>
+						I have experience with HTML and CSS on the frontend, utilizing libaries like Bootstrap to make development quicker and more productive.
+						I have most of my experience in databases with sql languages. Mainly, Sqlite3 since it comes packages as a module in Python.</p>
 
 						<p>I have a course certificate for completing CS50 from Harvard Online. I'm also currently enrolled in <a href="https://www.boot.dev" ref="noopener norefferer" target="_blank">Boot.dev</a>. I excel at learn and am excited to better my skills in programming!</p>
 
@@ -239,11 +238,3 @@
 
 	</body>
 </html>
-<!--<h4>Contact Me Through:</h4>
-	<a href="https://github.com/Coding920" target="_blank" ref="noopener norefferer">
-	<button type="button" class="btn btn-primary p-4 btn-lg">My Github</button>
-	</a>
-	<a href="www.linkedin.com/in/justin-tamez" target="_blank" ref="noopener norefferer">
-	<button type="button" class="btn btn-primary p-4 btn-lg">My LinkedIn</button>
-	</a>
-	<p>Or email me at my email: Justin.tamez04@gmail.com</p>-->
