--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-		<link href="./static/styles.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet">
 
 		<meta property="description" content="Portfolio for a software developer and programmer looking for work in the tech field. Has experience in Python, Sql, Flask, Html/Css, Git and more">
 
 		<title>Justin | Developer</title>
-		<link rel="icon" type="image/png" href="./static/icon.png">
+		<link rel="icon" type="image/png" href="https://d123yfbi5oqq2m.cloudfront.net/icon.png">
 
 	</head>
 
@@ -25,7 +25,7 @@
 		<header>
 			<nav class="navbar navbar-expand-sm fixed-top bg-dark navbar-dark">
 				<div class="container-fluid">
-					<img src="./static/logoV2.png" alt="Logo with the initials J and T standing for justin tamez, and angular brackets surrounding the initials" class="navbar-brand">
+					<img src="https://d123yfbi5oqq2m.cloudfront.net/logoV2.png" alt="Logo with the initials J and T standing for justin tamez, and angular brackets surrounding the initials" class="navbar-brand">
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -48,7 +48,7 @@
 					<div class="container-lg">
 						<div class="row py-5 text-center">
 							<div class="col-lg-4">
-								<img src="./static/Leia_and_me_circle.png" id="profile-photo" alt="Picture of justin kneeling next to his white australian-labradoodle named leia" class="float-lg-end">
+								<img src="https://d123yfbi5oqq2m.cloudfront.net/Leia_and_me_circle.png" id="profile-photo" alt="Picture of justin kneeling next to his white australian-labradoodle named leia" class="float-lg-end">
 							</div>
 							<div class="col align-middle">
 								<h1 class="h1">
@@ -73,51 +73,51 @@
 							<h2 class="text-center mb-4"><em>My skills</em></h2>
 							<div id="skills">
 								<div class="card skill">
-									<img src="./static/python-logo.png" alt="The Python programming language logo, two blocky pythons" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/python-logo.png" alt="The Python programming language logo, two blocky pythons" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Python</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/flask_logo.png" alt="The flask framework logo, an old style flask" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/flask_logo.png" alt="The flask framework logo, an old style flask" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Flask</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/Sql_logo.png" alt="The sql logo, three circles on top of each other, stacked in a 3d like fashion." class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/Sql_logo.png" alt="The sql logo, three circles on top of each other, stacked in a 3d like fashion." class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">SQL</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/C-lang.png" alt="The C language logo, a white letter C in the middle of blue hexagon" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/C-lang.png" alt="The C language logo, a white letter C in the middle of blue hexagon" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">C (language)</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/Html-logo.png" alt="The HTML logo, an orange shield with a white H in the middle" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/Html-logo.png" alt="The HTML logo, an orange shield with a white H in the middle" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">HTML</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/css_logo.png" alt="The CSS logo, a blue shield with a white squiggle in the middle" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/css_logo.png" alt="The CSS logo, a blue shield with a white squiggle in the middle" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">CSS</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/javascript-logo.png" alt="The javascript logo, a yellow square background with black letters 'JS' in the bottom right hand corner" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/javascript-logo.png" alt="The javascript logo, a yellow square background with black letters 'JS' in the bottom right hand corner" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Javascript</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/bootstrap-logo.svg" alt="The bootstrap logo, a purple box with rounded points on the left and right, and a white B in the middle" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/bootstrap-logo.svg" alt="The bootstrap logo, a purple box with rounded points on the left and right, and a white B in the middle" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Bootstrap</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/bash-logo.png" alt="The bourne again shell, or bash shell logo. A white 3d box with a dollar sign terminal on the front" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/bash-logo.png" alt="The bourne again shell, or bash shell logo. A white 3d box with a dollar sign terminal on the front" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Bash</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/git_logo.png" alt="The git logo, a orange box, rotated 45 degrees. It has a white graph tree extending downwards" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/git_logo.png" alt="The git logo, a orange box, rotated 45 degrees. It has a white graph tree extending downwards" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Git</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/linux-logo.png" alt="The linux logo, a cartoon penguin drawn semi 3d" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/linux-logo.png" alt="The linux logo, a cartoon penguin drawn semi 3d" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Linux</h2>
 								</div>
 								<div class="card skill">
-									<img src="./static/terminal.png" alt="A flat black terminal with a white arrow for a prompt, this is in place of the windows logo" class="image-fluid m-auto w-25 card-img-top">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/terminal.png" alt="A flat black terminal with a white arrow for a prompt, this is in place of the windows logo" class="image-fluid m-auto w-25 card-img-top">
 									<h2 class="card-title">Windows</h2>
 								</div>
 							</div>
@@ -138,7 +138,7 @@
 						<div class="project-grid mt-4">
 							<div class="project">
 								<div class="card">
-									<img src="./static/Python_phonebook.png" class="card-img-top" alt="Picture of a retro looking user interface for a phonebook style contact program made in Python.">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/Python_phonebook.png" class="card-img-top" alt="Picture of a retro looking user interface for a phonebook style contact program made in Python.">
 									<div class="card-body">
 										<h5 class="card-title">
 											Python Phonebook
@@ -154,7 +154,7 @@
 							<!-- Card Start -->
 							<div class="project">
 								<div class="card">
-									<img src="./static/Finance_app.png" class="card-img-top" alt="Picture of a web application displaying a portfolio of stocks with a minimal user interface.">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/Finance_app.png" class="card-img-top" alt="Picture of a web application displaying a portfolio of stocks with a minimal user interface.">
 									<h5 class="card-title">
 										Mock Finance Flask Web-app
 									</h5>
@@ -188,7 +188,7 @@
 							<!-- Card Start -->
 							<div class="project">
 								<div class="card">
-									<img src="./static/credit.png" class="card-img-top" alt="picture of source code from a program in the C lanuage. It's inside of a text editor">
+									<img src="https://d123yfbi5oqq2m.cloudfront.net/credit.png" class="card-img-top" alt="picture of source code from a program in the C lanuage. It's inside of a text editor">
 									<h5 class="card-title">
 										Command Line Credit Card Verifier
 									</h5>
