Had no referrer on a link to my resume

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 								</h1>
 								<div class="my-4">
 									<!-- TODO Fix with S3 -->
-									<a class="mx-3" href="https://www.linkedin.com/in/justin-tamez" ref="noopener norefferer" target="_blank"><button type="button" class="btn btn-primary">Download Resume</button></a>
-									<a class="mx-3 fs-3" href="https://github.com/Coding920" ref="noopener norefferer" target="_blank">Github<i class="bi bi-github"></i></a>
-									<a class="mx-3 fs-3" href="https://www.linkedin.com/in/justin-tamez" ref="noopener norefferer" target="_blank">LinkedIn<i class="bi bi-linkedin"></i></a>
+									<a class="mx-3" href="https://d123yfbi5oqq2m.cloudfront.net/Resume.pdf" target="_blank"><button type="button" class="btn btn-primary">Download Resume</button></a>
+									<a class="mx-3 fs-3" href="https://github.com/Coding920" ref="noopener noreferrer" target="_blank">Github<i class="bi bi-github"></i></a>
+									<a class="mx-3 fs-3" href="https://www.linkedin.com/in/justin-tamez" ref="noopener noreferrer" target="_blank">LinkedIn<i class="bi bi-linkedin"></i></a>
 								</div>
 							</div>
 						</div>
@@ -218,7 +218,7 @@
 						I have experience with HTML and CSS on the frontend, utilizing libaries like Bootstrap to make development quicker and more productive.
 						I have most of my experience in databases with sql languages. Mainly, Sqlite3 since it comes packages as a module in Python.</p>
 
-						<p>I have a course certificate for completing CS50 from Harvard Online. I'm also currently enrolled in <a href="https://www.boot.dev" ref="noopener norefferer" target="_blank">Boot.dev</a>. I excel at learn and am excited to better my skills in programming!</p>
+						<p>I have a course certificate for completing CS50 from Harvard Online. I'm also currently enrolled in <a href="https://www.boot.dev" ref="noopener noreferrer" target="_blank">Boot.dev</a>. I excel at learn and am excited to better my skills in programming!</p>
 
 
 						<!-- Contact Me Here -->
@@ -228,12 +228,12 @@
 							<div class="col"><h5>Email: Justin.tamez04@gmail.com</h5></div>
 						</div>
 						<div class="row my-2">
-							<div class="col"><h5>LinkedIn: <a href="https://www.linkedin.com/in/justin-tamez" ref="noopener norefferer" target="_blank">www.linkedin.com/in/justin-tamez</a></h5></div>
-							<div class="col"><h5>Github: <a href="https://github.com/Coding920" ref="noopener norefferer" target="_blank">https://github.com/Coding920</a></h5></div>
+							<div class="col"><h5>LinkedIn: <a href="https://www.linkedin.com/in/justin-tamez" ref="noopener noreferrer" target="_blank">www.linkedin.com/in/justin-tamez</a></h5></div>
+							<div class="col"><h5>Github: <a href="https://github.com/Coding920" ref="noopener noreferrer" target="_blank">https://github.com/Coding920</a></h5></div>
 						</div>
 						<div class="row my-2">
 							<!-- Fix with s3 TODO -->
-							<div class="col"><h5>Download resume <a href="https://www.linkedin.com/in/justin-tamez" ref="noopener norefferer" target="_blank"><em>HERE</em></a></h5></div>
+							<div class="col"><h5>Download resume <a href="https://d123yfbi5oqq2m.cloudfront.net/Resume.pdf" target="_blank"><em>HERE</em></a></h5></div>
 						</div>
 					</div>
 
