--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<p class="card-text">
 										A phonebook/contact program made for the desktop. It was made with python, Sqlite3, and Python's Tk Interface for the front end.
 										Made with settings for background, font, etc. Tk isn't the easiest front end language, it has less support and tools then a traditional front end
-										in Html/Css. Nonetheless, it was a very fun project in making a desktop UI and perserverance.
+										in Html/Css. Nonetheless, it was a very fun project in making a desktop UI and perseverance.
 										</p>
 									</div>
 								</div>
@@ -161,7 +161,7 @@
 									<div class="card-body">
 										<p class="card-text">
 										A Flask web app made in CS50 with minimal source code setup. Implemented registering of accounts and logging out,
-										buying and selling of stocks, stock history, and home page/current portfolio of stocks. Has all the neccessary logic and checks
+										buying and selling of stocks, stock history, and home page/current portfolio of stocks. Has all the necessary logic and checks
 										for user input. I also interfaces with an API from Harvard.
 										</p>
 									</div>
@@ -178,7 +178,7 @@
 											Python Progress Bar
 										</h5>
 										<p class="card-text">
-										This is a progress bar made for intergration into any Pyton project. It uses ascii escape code
+										This is a progress bar made for integration into any Python project. It uses ascii escape code
 										to move the cursor around and animate the bar. It's a quick and easy to implement way to provide the user with
 										updates and detailed progress. The documentation is also detailed and easy to follow.
 										</p>
@@ -215,7 +215,7 @@
 						</h2>
 
 						<p>Hi, I'm Justin! I am a programmer excited to make a career in tech. I can do both front end and back end with my most utilized language being Python. I also have experience with the Flask framework.
-						I have experience with HTML and CSS on the frontend, utilizing libaries like Bootstrap to make development quicker and more productive.
+						I have experience with HTML and CSS on the frontend, utilizing libraries like Bootstrap to make development quicker and more productive.
 						I have most of my experience in databases with sql languages. Mainly, Sqlite3 since it comes packages as a module in Python.</p>
 
 						<p>I have a course certificate for completing CS50 from Harvard Online. I'm also currently enrolled in <a href="https://www.boot.dev" ref="noopener noreferrer" target="_blank">Boot.dev</a>. I excel at learn and am excited to better my skills in programming!</p>
